--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				</div>
 				<ul>
 					<li><a href="https://nopegamer566.github.io/Nopegamer/">Home</a></li>
-					<li class="active"><a href="#">About</a></li>
+					<li class="active"><a href="https://nopegamer566.github.io/Nopegamer-about/">About</a></li>
 					<li><a href="#">Discord</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
